--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,17 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/* App.css */
+.MainApp {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  background-image: url("https://i.pinimg.com/originals/81/fb/3f/81fb3fcc103ba6e49c7788a45e4ccdc8.jpg");
+  background-size: cover;
+  min-height: 100vh; /* Set minimum height to cover the entire viewport height */
+  /* Other styles */
+}
+/* Style for centering the MusicApp */
+.CenteredContent {
+  padding: 2%;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  align-items: center;
+  height: 100%; /* To occupy the entire height of the parent */
 }
