--- a/src/component/css/FoodApp.css
+++ b/src/component/css/FoodApp.css
@@ -4,7 +4,7 @@
   border-radius: 20px;
   box-shadow: 0 0 10px rgba(165, 63, 63, 0.1);
   /* background-color: #ffffff; */
-  background-color: rgba(227, 186, 143, 0.95);
+  background-color: white;
 }
 
 /* Basic Styles */
@@ -44,12 +44,12 @@ button {
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  background-color: #007bff;
+  background-color: orange;
   color: white;
 }
 
 button:hover {
-  background-color: #0056b3;
+  background-color: orange;
 }
 
 /* Input Styles */
