test out hosting

--- a/src/component/css/CryptoApp.css
+++ b/src/component/css/CryptoApp.css
@@ -4,7 +4,7 @@
   border-radius: 20px;
   box-shadow: 0 0 10px rgba(165, 63, 63, 0.1);
   /* background-color: #ffffff; */
-  background-color: rgba(227, 186, 143, 0.95);
+  background-color: white;
 }
 
 .table {
