--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,135 @@
-/* App.css */
-.MainApp {
+/* Main container */
+.main-app-container {
   display: flex;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 0;
   flex-direction: column;
-  /* background-image: url("https://i.pinimg.com/originals/81/fb/3f/81fb3fcc103ba6e49c7788a45e4ccdc8.jpg"); */
   background-image: url("https://w0.peakpx.com/wallpaper/496/227/HD-wallpaper-sunset-blurry-warm-hue-orange-hot-color-abstract.jpg");
   background-size: cover;
-  min-height: 100vh; /* Set minimum height to cover the entire viewport height */
-  /* Other styles */
+  justify-content: center; /* Horizontal centering */
+  align-items: center; /* Vertical centering */
+  height: 100vh;
+  min-height: 100vh;
+  position: relative; /* Change to relative to position child elements */
 }
+
+/* Container for App Page*/
+.app-container {
+  width: calc(2 / 3 * 100vw);
+  height: calc(2 / 3 * 100vh);
+  max-width: 60em;
+  max-height: 80vh;
+  overflow: auto;
+  padding: 30px;
+  border-radius: 20px;
+  box-shadow: 0 0 10px rgba(165, 63, 63, 0.1);
+  color: white;
+  background-color: #343a40;
+  position: absolute;
+  top: 50%; /* Place the top of the container at 50% of the parent's height */
+  left: 50%; /* Place the left of the container at 50% of the parent's width */
+  transform: translate(-50%, -50%); /* Center the container */
+}
+
 /* Style for centering the MusicApp */
-.CenteredContent {
+.center-music-player {
   padding: 2%;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%; /* To occupy the entire height of the parent */
+  box-shadow: 0 0 0px rgba(0, 0, 0, 0.5);
+}
+
+
+/* Summary container for WorkoutApp Page*/
+.summary-container {
+  width: 100%;
+  padding: 30px;
+  border-radius: 20px;
+  box-shadow: 0 0 10px rgba(165, 63, 63, 0.1);
+  background-color: lightgoldenrodyellow;
+}
+
+/* About*/
+.about-highlight {
+  color: burlywood; 
+}
+.about-highlight-underline {
+  color: burlywood; 
+  text-decoration: underline;
+}
+
+/* Table */
+.table {
+  color: white;
+}
+
+.btn{
+  width: 100%;
+  background-color: burlywood;
+  border: #ccc;
+}
+
+.sub-text{
+  font-size: 12px;
+}
+
+.food-drop-box{
+  width: 100%;
+  border: #ccc;
+  border-radius: 5px;;
+}
+
+.food-checkbox{
+  padding-top: 10%;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  background-color: #007bff;
+}
+
+.food-card {
+  padding: 2%;
+  background-origin: padding-box;
+  border: black;
+  border-color: white;
+  position: static;
+}
+
+.dots-container {
+  position: absolute;
+  bottom: 10px;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+}
+
+.dot {
+  height: 10px;
+  width: 10px;
+  margin: 0 5px;
+  border-radius: 50%;
+  background-color: #ccc;
+  cursor: pointer;
+}
+
+.dot.active {
+  background-color: #007bff;
+}
+
+.content {
+  flex: 1; /* This will push the footer to the bottom */
+}
+
+footer {
+  width: 100%;
+  text-align: center;
+  padding: 20px 0;
+}
+
+/* CSS file or inside style tags */
+@media (max-width: 768px) {
+  .nav-link {
+    font-size: 0.8rem; /* Adjust the font size for smaller screens */
+  }
 }
