edit UI for mobile phone usage

--- a/src/component/css/WorkoutApp.css
+++ b/src/component/css/WorkoutApp.css
@@ -1,9 +1,15 @@
 /* Summary container for WorkoutApp Page*/
 .summary-container {
+    color: black;
     width: 100%;
     padding: 30px;
     border-radius: 20px;
     box-shadow: 0 0 10px rgba(165, 63, 63, 0.1);
     background-color: lightgoldenrodyellow;
+  }
+  
+  .w-text-small {
+    color: aqua;
+    font-size: 0.8em; /* Adjust the size as needed */
   }
   
