--- a/src/component/css/App.css
+++ b/src/component/css/App.css
@@ -15,7 +15,7 @@
 
 /* Container for App Page*/
 .app-container {
-  width: calc(4 / 5 * 100vw);
+  width: calc(8 / 9 * 100vw);
   height: calc(2 / 3 * 100vh);
   max-width: 60em;
   max-height: 70vh;
@@ -57,4 +57,8 @@ footer {
 .highlight-underline {
   color: burlywood; 
   text-decoration: underline;
+}
+
+.s-word-size {
+  font-size: small;
 }
