edit UI version 3

--- a/src/component/css/FoodApp.css
+++ b/src/component/css/FoodApp.css
@@ -33,6 +33,11 @@
     background-color: burlywood;
     border: #ccc;
   }
+
+  .btn-blue {
+    background-color:#007bff;
+    /* Add any other styles as needed */
+  }
   
 .sub-text{
     font-size: 11px;
