--- a/src/component/css/App.css
+++ b/src/component/css/App.css
@@ -25,10 +25,8 @@
   box-shadow: 0 0 10px rgba(165, 63, 63, 0.1);
   color: white;
   background-color: #343a40;
-  position: absolute;
-  top: 50%; /* Place the top of the container at 50% of the parent's height */
-  left: 50%; /* Place the left of the container at 50% of the parent's width */
-  transform: translate(-50%, -50%); /* Center the container */
+  justify-content: center;
+  align-items: center;
 }
 
 /* Style for centering the MusicApp */
