--- a/src/component/css/App.css
+++ b/src/component/css/App.css
@@ -19,6 +19,7 @@
   height: calc(2 / 3 * 100vh);
   max-width: 60em;
   max-height: 70vh;
+  padding-top: 20px;
   overflow: auto;
   padding: 30px;
   border-radius: 20px;
@@ -38,8 +39,19 @@
   box-shadow: 0 0 0px rgba(0, 0, 0, 0.5);
 }
 
+.dropdown-menu {
+  background-color: transparent;
+  border: none;
+}
+
 .content {
   flex: 1; /* This will push the footer to the bottom */
+}
+
+.navbar {
+  position: fixed;
+  top: 0;
+  z-index: 1000; /* Set a high z-index to ensure it's above other elements */
 }
 
 footer {
